--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,16 @@ ENV/
 env.bak/
 venv.bak/
 
-# miscellaneous
+# Ignore Python cache files
+__pycache__/
+*.pyc
+.pytest_cache/
 
+# .dockerignore
+.dockerignore
+
+# miscellaneous
 user_uploads/
+
+# Ignore any specific system files
+.DS_Store
